Project Based on JavaScript and Api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "livePreview.defaultPreviewPath": "/ciricbuzz.html"
+    "livePreview.defaultPreviewPath": "/ciricbuzz.html",
+    "liveServer.settings.port": 5501
 }
